fixed responsive bug that produces right overflow of viewport

--- a/desto/src/app/core/footer/footer.component.scss
+++ b/desto/src/app/core/footer/footer.component.scss
@@ -6,7 +6,10 @@ footer {
   height: 180px;
   position: absolute;
   bottom: 0;
-  width: 100%;
+  width: 90vw;
+  text-align: center;
+  margin-left: 5vw;
+  margin-right: 5vw;
 }
 
 #footerLine {
