--- a/desto/src/app/modules/opening/opening.component.scss
+++ b/desto/src/app/modules/opening/opening.component.scss
@@ -8,10 +8,9 @@
   z-index: -1;
 
   background: linear-gradient(
-        rgba(0, 0, 0, 0.25),
-        rgba(0, 0, 0, 0.25)
-      ), url('../../../assets/images/website_background.jpg') no-repeat center center / cover;
-
+    rgba(0, 0, 0, 0.25),
+    rgba(0, 0, 0, 0.25)
+  ), url('../../../assets/images/website_background.jpg') no-repeat center center / cover;;
   background-position-y: 15%;
 }
 
