--- a/desto/src/assets/scss/_base.scss
+++ b/desto/src/assets/scss/_base.scss
@@ -8,6 +8,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: $footer-height;
+  width: 100vw;
 }
 
 h1 {
